workhorse/gitops/addons/kube-prometheus-stack/overlays/prod/ingress-prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/inbound-cidrs: 73.170.221.233/32
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: prometheus.jresmith.com
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:945503455271:certificate/3e571108-5861-42f0-be07-c625a1b28514
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP":80},{"HTTPS":443}]
spec:
  ingressClassName: alb
  rules:
  - host: prometheus.jresmith.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
